--- a/assets/main.css
+++ b/assets/main.css
@@ -1,35 +1,50 @@
-body{
-    font-family: 'Poppins', sans-serif;
-    background-color: rgb(255, 255, 255);
+@font-face {
+  font-family: "Mohol";
+  src: url("Mohol-Light.woff") format("woff");
 }
 
-#global-wrapper{
-    display: flex;
-    justify-content: center;
+body {
+  font-family: "Poppins";
+  background-color: rgb(255, 255, 255);
 }
 
-#header{
-    text-align: center;
+main {
+  display: flex;
+  justify-content: center;
 }
 
-#content-wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+h2 {
+  font-family: "Mohol";
 }
 
-#image-wrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+#header {
+  text-align: center;
 }
 
-.lazslo-images{
-    padding: 1em;
-    width: 200px;
-    height: auto;
+#content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#sketch-div{
-    padding: 1em;
+#image-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.lazslo-images {
+  padding: 1em;
+  width: 200px;
+  height: auto;
+}
+
+#sketch-div {
+  padding: 1em;
+}
+
+#sketch-wrapper {
+  display: grid;
+  grid-template-rows: repeat(auto);
+  row-gap: 5vh;
 }
