--- a/assets/main.css
+++ b/assets/main.css
@@ -9,22 +9,19 @@ body {
 }
 
 main {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  justify-items: center;
+  row-gap: 30vh;
+  padding: 30vh 0px;
 }
 
+h1,
 h2 {
   font-family: "Mohol";
 }
 
 #header {
   text-align: center;
-}
-
-#content-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 #image-wrapper {
@@ -39,19 +36,23 @@ h2 {
   height: auto;
 }
 
-#sketch-div {
-  padding: 1em;
+.sketch-wrapper {
+  display: flex;
+  flex-flow: column-reverse;
+  background-color: transparent;
+}
+.sketch-wrapper > canvas {
+  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 }
 
-#sketch-wrapper {
-  display: grid;
-  place-content: center;
-  row-gap: 5vh;
+.sketch-wrapper > i {
+  position: absolute;
+  transform: translateX(-50%) translateY(20px) rotate(8deg);
 }
 
 #c3 {
-  width: fit-content;
   position: relative;
+  width: fit-content;
   background: radial-gradient(rgba(0, 0, 0, 0.9), rgb(0, 0, 0));
   background-blend-mode: soft-light;
 }
