--- a/assets/main.css
+++ b/assets/main.css
@@ -45,19 +45,36 @@ h2 {
   box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 }
 
-.sketch-wrapper > i {
+.sketch-wrapper i {
   position: absolute;
   transform: translateX(-50%) translateY(20px) rotate(8deg);
 }
 
-#c3 {
+.sketch-wrapper > .bottom {
+  position: absolute;
+}
+
+.sketch-wrapper > .bottom > button {
+  opacity: 0.8;
+  color: white;
+  font-family: "Mohol";
+  background: black;
+  border: none;
+  font-size: 1.2em;
+  margin: 10px;
+  right: 0px;
+}
+
+#c3,
+#c4 {
   position: relative;
   width: fit-content;
   background: radial-gradient(rgba(0, 0, 0, 0.9), rgb(0, 0, 0));
   background-blend-mode: soft-light;
 }
 
-#c3::after {
+#c3::after,
+#c4::after {
   content: "";
   position: absolute;
   /* background-color: black; */
